added login ,post propery and admin html

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -83,7 +83,7 @@
     <!-- ── Top Bar ── -->
     <header class="dash-topbar">
       <div class="topbar-left">
-        <button class="sidebar-toggle" onclick="toggleSidebar()">
+        <button class="sidebar-toggle" onclick="toggleSidebar()" title="Toggle Sidebar">
           <i class="bi bi-list"></i>
         </button>
         <div class="topbar-breadcrumb">
@@ -175,7 +175,7 @@
                 <p class="inquiry-msg">Hi, is the Masaki apartment still available? I'd like to arrange a viewing…</p>
                 <p class="inquiry-time"><i class="bi bi-clock"></i> 2 hours ago</p>
               </div>
-              <a href="https://wa.me/255700000001" class="inquiry-whatsapp" target="_blank" title="Reply on WhatsApp">
+              <a href="https://wa.me/255700000001" class="inquiry-whatsapp" target="_blank" rel="noopener noreferrer" title="Reply on WhatsApp">
                 <i class="bi bi-whatsapp"></i>
               </a>
             </div>
@@ -187,9 +187,9 @@
                 <p class="inquiry-msg">What is the minimum lease period for the Kijitonyama property?</p>
                 <p class="inquiry-time"><i class="bi bi-clock"></i> 5 hours ago</p>
               </div>
-              <a href="https://wa.me/255700000002" class="inquiry-whatsapp" target="_blank" title="Reply on WhatsApp">
-                <i class="bi bi-whatsapp"></i>
-              </a>
+              <a href="https://wa.me/255700000002" class="inquiry-whatsapp" target="_blank" rel="noopener noreferrer" title="Reply on WhatsApp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
             </div>
 
             <div class="inquiry-item unread">
@@ -199,9 +199,9 @@
                 <p class="inquiry-msg">Does the villa include a parking space? We have two cars.</p>
                 <p class="inquiry-time"><i class="bi bi-clock"></i> Yesterday</p>
               </div>
-              <a href="https://wa.me/255700000003" class="inquiry-whatsapp" target="_blank" title="Reply on WhatsApp">
-                <i class="bi bi-whatsapp"></i>
-              </a>
+              <a href="https://wa.me/255700000003" class="inquiry-whatsapp" target="_blank" rel="noopener noreferrer" title="Reply on WhatsApp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
             </div>
 
             <div class="inquiry-item">
@@ -211,9 +211,9 @@
                 <p class="inquiry-msg">Can we negotiate the price for a 12-month contract?</p>
                 <p class="inquiry-time"><i class="bi bi-clock"></i> 2 days ago</p>
               </div>
-              <a href="https://wa.me/255700000004" class="inquiry-whatsapp" target="_blank" title="Reply on WhatsApp">
-                <i class="bi bi-whatsapp"></i>
-              </a>
+              <a href="https://wa.me/255700000004" class="inquiry-whatsapp" target="_blank" rel="noopener noreferrer" title="Reply on WhatsApp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
             </div>
 
           </div>
@@ -454,7 +454,7 @@
               <p class="inq-property"><i class="bi bi-house"></i> Re: Luxury Ocean-View Apartment — Masaki</p>
               <p class="inquiry-full-msg">Hi, is the Masaki apartment still available? I'd like to arrange a viewing this weekend if possible. I'm looking for a 12-month lease. Please let me know your availability.</p>
               <div class="inquiry-full-actions">
-                <a href="https://wa.me/255700000001?text=Hello+Amina" class="inq-whatsapp-btn" target="_blank">
+                <a href="https://wa.me/255700000001?text=Hello+Amina" class="inq-whatsapp-btn" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-whatsapp"></i> Reply on WhatsApp
                 </a>
                 <a href="tel:+255700000001" class="inq-call-btn">
@@ -477,7 +477,7 @@
               <p class="inq-property"><i class="bi bi-house"></i> Re: Executive Townhouse — Kijitonyama</p>
               <p class="inquiry-full-msg">What is the minimum lease period for the Kijitonyama property? Also, is the price negotiable for a long-term contract? We are a family of 4 looking to move by February.</p>
               <div class="inquiry-full-actions">
-                <a href="https://wa.me/255700000002?text=Hello+David" class="inq-whatsapp-btn" target="_blank">
+                <a href="https://wa.me/255700000002?text=Hello+David" class="inq-whatsapp-btn" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-whatsapp"></i> Reply on WhatsApp
                 </a>
                 <a href="tel:+255700000002" class="inq-call-btn">
@@ -500,7 +500,7 @@
               <p class="inq-property"><i class="bi bi-house"></i> Re: Heritage Beachfront Villa — Zanzibar</p>
               <p class="inquiry-full-msg">Does the villa include a parking space? We have two cars and would need at least two bays. Also, is the beach access private or shared with neighbouring properties?</p>
               <div class="inquiry-full-actions">
-                <a href="https://wa.me/255700000003?text=Hello+Grace" class="inq-whatsapp-btn" target="_blank">
+                <a href="https://wa.me/255700000003?text=Hello+Grace" class="inq-whatsapp-btn" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-whatsapp"></i> Reply on WhatsApp
                 </a>
                 <a href="tel:+255700000003" class="inq-call-btn">
@@ -523,7 +523,7 @@
               <p class="inq-property"><i class="bi bi-house"></i> Re: Modern Family Villa — Arusha</p>
               <p class="inquiry-full-msg">Can we negotiate the price for a 12-month contract? We're very interested in the Arusha villa but the asking price is slightly above our budget. Would you consider a 10% reduction?</p>
               <div class="inquiry-full-actions">
-                <a href="https://wa.me/255700000004?text=Hello+Hassan" class="inq-whatsapp-btn" target="_blank">
+                <a href="https://wa.me/255700000004?text=Hello+Hassan" class="inq-whatsapp-btn" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-whatsapp"></i> Reply on WhatsApp
                 </a>
                 <a href="tel:+255700000004" class="inq-call-btn">
@@ -556,7 +556,7 @@
         <div class="dash-card profile-card">
           <div class="profile-avatar-wrap">
             <div class="profile-avatar">👨🏿</div>
-            <button class="profile-avatar-edit"><i class="bi bi-camera-fill"></i></button>
+            <button class="profile-avatar-edit" title="Change profile picture"><i class="bi bi-camera-fill"></i></button>
           </div>
           <h2 class="profile-name">James Mollel</h2>
           <p class="profile-role"><i class="bi bi-patch-check-fill"></i> Verified Landlord</p>
@@ -587,30 +587,30 @@
           <div class="form-row-dash">
             <div class="form-field-dash">
               <label class="form-label-dash">First Name</label>
-              <input type="text" class="dash-input" value="James"/>
+              <input type="text" class="dash-input" value="James" placeholder="Enter your first name"/>
             </div>
             <div class="form-field-dash">
               <label class="form-label-dash">Last Name</label>
-              <input type="text" class="dash-input" value="Mollel"/>
+              <input type="text" class="dash-input" value="Mollel" placeholder="Enter your last name"/>
             </div>
           </div>
           <div class="form-field-dash">
             <label class="form-label-dash">Email Address</label>
-            <input type="email" class="dash-input" value="james.mollel@email.com"/>
+            <input type="email" class="dash-input" value="james.mollel@email.com" placeholder="Enter your email address"/>
           </div>
           <div class="form-field-dash">
             <label class="form-label-dash">Phone Number</label>
-            <input type="tel" class="dash-input" value="+255 700 000 000"/>
+            <input type="tel" class="dash-input" value="+255 700 000 000" placeholder="Enter your phone number"/>
           </div>
           <div class="form-field-dash">
             <label class="form-label-dash">City</label>
-            <input type="text" class="dash-input" value="Dar es Salaam"/>
+            <input type="text" class="dash-input" value="Dar es Salaam" placeholder="Enter your city"/>
           </div>
           <div class="form-field-dash">
             <label class="form-label-dash">Bio</label>
-            <textarea class="dash-input dash-textarea" rows="3">Experienced landlord with properties in Dar es Salaam, Zanzibar and Arusha.</textarea>
+            <textarea class="dash-input dash-textarea" rows="3" placeholder="Tell us about yourself and your properties">Experienced landlord with properties in Dar es Salaam, Zanzibar and Arusha.</textarea>
           </div>
-          <button class="btn-gold" style="margin-top:8px;" onclick="saveProfile()">
+          <button class="btn-gold btn-gold-margin" onclick="saveProfile()">
             <i class="bi bi-check2"></i> Save Changes
           </button>
         </div>
@@ -642,7 +642,7 @@
                 <p class="settings-desc">Get notified when someone contacts you about a listing</p>
               </div>
               <label class="toggle-switch">
-                <input type="checkbox" checked/>
+                <input type="checkbox" checked title="Enable new inquiry alerts"/>
                 <span class="toggle-slider"></span>
               </label>
             </div>
@@ -652,7 +652,7 @@
                 <p class="settings-desc">Receive inquiry details directly on WhatsApp</p>
               </div>
               <label class="toggle-switch">
-                <input type="checkbox" checked/>
+                <input type="checkbox" checked title="Enable WhatsApp notifications"/>
                 <span class="toggle-slider"></span>
               </label>
             </div>
@@ -662,7 +662,7 @@
                 <p class="settings-desc">Weekly summary of your listing performance</p>
               </div>
               <label class="toggle-switch">
-                <input type="checkbox"/>
+                <input type="checkbox" title="Enable email digest"/>
                 <span class="toggle-slider"></span>
               </label>
             </div>
